# stock-move-scout-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: stock_scout_evidence_refresh.json
docs/: README.md  architecture_refactor.md  auction_detail_system.md  current_architecture.md  data_flow_overview.md  data_sources.md  evaluation_system.md  evidence_layer.md  morning_reference_workflow.md  mysql_schema.md  project_architecture.md  refactor_status.md  task_schedule.md  tdx_mover_watcher.md
scripts/: audit_event_evidence.py  backfill_market_width_daily_history.py  backfill_market_width_research_pool_intraday.py  build_anchor_realtime_roles.py  build_announcement_effects.py  build_auction_candidates.py  build_auction_trend_summary.py  build_daily_market_themes.py  build_effective_facts.py  build_event_engine.py  build_headline_theme_role_evidence.py  build_leaderboard_snapshot.py  build_morning_reference_post.py  build_research_pool_snapshot.py  build_research_pool_theme_members.py  build_stock_evidence_layer.py  build_stock_move_judgements.py  build_stock_scout_universe.py  check_architecture_consistency.py  check_scheduled_task_health.py  collect_eastmoney_limit_up_pool.py  collect_hard_catalyst_evidence.py  collect_iwencai_period_rankings.py  collect_kpl_limit_up_reasons.py  collect_kpl_market_capacity.py  collect_kpl_plate_details.py  collect_kpl_plate_strength.py  collect_kpl_replay_limit_themes.py  collect_kpl_stock_featured_sections.py  collect_lhb_seat_evidence.py  collect_market_news_digest.py  collect_market_width_daily_close.py  (+41 more)
(+72 files in other folders)
